--- a/views/html/recepregistrations.html
+++ b/views/html/recepregistrations.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Student Registration</title>
+    <title>Receptionistt Registration</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="../css/main.css">
@@ -85,7 +85,7 @@
                             <li><a href="contact.html">Contact Us</a></li>
                             <!-- <li><a href="contact.html">Contact Us</a></li> -->
                             <li ><a href="login.html">Sign In</a></li>
-                            <li class="active"><a href="sturegistrations.html">Sign Up</a></li>
+                            <li class="active"><a href="recepregistrations.html">Sign Up</a></li>
                         
                             <!-- <li ><a href="home.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
@@ -121,9 +121,9 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12 forms-right-icons">
                     <div class="section-heading">
-                        <h2><span>Sign Up Students  With Us</span></h2>
+                        <h2><span>Sign Up Receptionists  With Us</span></h2>
                         <br/>
-                        <p class="subheading">Register all the students to our system.
+                        <p class="subheading">Register all the receptionists to our system.
                         </p>
                     </div>
                     <!-- <div class="col-md-4 col-xs-12 block">
@@ -232,10 +232,10 @@
                                                         <div class="select-dropdown"></div> -->
                                                     <!-- </div> -->
                                                 <!-- </div> -->
-                                                <div class="input-group form-group">
+                                                <!-- <div class="input-group form-group">
                                                         <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user"></i></span>
                                                         <input type="date" class="form-control" placeholder="Date of Birthday" aria-describedby="basic-addon1" required="required">
-                                                    </div>
+                                                    </div> -->
                                                     <div class="input-group form-group">
                                                             <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user"></i></span>
                                                             <!-- <input type="date" class="form-control" placeholder="Date of Birthday" aria-describedby="basic-addon1" required="required">
@@ -263,14 +263,14 @@
                                                     <span class="input-group-addon" id="basic-addon1"><i class="fa fa-phone"></i></span>
                                                     <input type="tel" class="form-control" placeholder="Phone No." aria-describedby="basic-addon1" required="required">
                                                 </div>
-                                                <div class="input-group form-group">
+                                                <!-- <div class="input-group form-group">
                                                     <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user"></i></span>
                                                     <input type="text" class="form-control" placeholder="Parents/ Guardian First Name" aria-describedby="basic-addon1" required="required">
-                                                </div>
-                                                <div class="input-group form-group">
+                                                </div> -->
+                                                <!-- <div class="input-group form-group">
                                                     <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user"></i></span>
                                                     <input type="text" class="form-control" placeholder="Parents/ Guardian Last Name" aria-describedby="basic-addon1" required="required">
-                                                </div>
+                                                </div> -->
                                                 <div class="input-group form-group">
                                                     <span class="input-group-addon" id="basic-addon1"><i class="fa fa-envelope"></i></span>
                                                     <input type="text" class="form-control" placeholder="Street Address" aria-describedby="basic-addon1" required="required">
