--- a/views/html/receptionist.html
+++ b/views/html/receptionist.html
@@ -10,70 +10,93 @@
     <link rel="stylesheet" type="text/css" href="../css/main.css">    
     <link rel="stylesheet" type="text/css" href="../css/skin.css">
 
+    <!-- <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
+    <link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all"> -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="../../../assets/script/index.js"></script>   
+    <script src="../../../assets1/script/index.js"></script>    
 </head>
 
 <body id="wrapper">
 
-    <section id="top-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
-                    <ul class="contact_links">
-                        <li><i class="fa fa-phone"></i><a href="#">+91 848 594 5080</a></li>
-                        <li><i class="fa fa-envelope"></i><a href="#">sales@aspiresoftware.in</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <ul class="social_links">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        </div>
-
-    </section>
-
-    <header>
-        <nav class="navbar navbar-inverse">
+        <section id="top-header">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			  </button>
-                    <a class="navbar-brand" href="#">
-                        <h1>Southern Educational Institute</h1><span>Galle</span></a>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
+                        <!-- <ul class="contact_links">
+                            <li><i class="fa fa-phone"></i><a href="#">+0912 242 189</a></li> -->
+                            <!-- <li><i class="fa fa-envelope"></i><a href="#">sales@aspiresoftware.in</a></li> -->
+                    
+                    </div> 
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <ul class="social_links">
+                            <li><i class="fa fa-phone"></i><a href="#">Call Us +0912 242 189</a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li> -->
+                            <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                            <!-- <li><a href="#"><i class="fa fa-facebook">facebook</i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter">Twitter</i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i>Linkedin</a></li>
+                            <li><a href="#"><i class="fa fa-skype">Skype</i></a></li> --> 
+                    
+                        </ul>
+                    </div>
+                   
                 </div>
-                <div id="navbar" class="collapse navbar-collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <!-- <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="#about">Features</a></li> -->
-                        <li><a href="about.html">About</a></li>
-                        <!-- <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="faq.html">FAQ</a></li> -->
-                        <li><a href="class_schedule.html">Class Schedule</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="signout.html">Sign Out</a></li>
-                        <!-- <li><a href="login.html">Sign In</a></li>
-                        <li><a href="registration.html">Sign Up</a></li> -->
-                    </ul>
-                </div>
-                <!--/.nav-collapse -->
             </div>
-        </nav>
-        <!--/.nav-ends -->
-    </header>
-
+    
+        </section>
+    
+        <header>
+            <!-- <nav class="navbar navbar-inverse"> -->
+            <nav class="navbar navbar-expand-lg navbar-light text-white bg-dark ">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <!-- <span class="icon-bar"></span> -->
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand " href="#" al>
+                    <!-- <div class="col-xs-2 icon"><img src="..\..\..\assets1\img\logo.jpeg"></src></i></div> -->
+                    <img height="120px" width="120px" src="..\..\..\assets1\img\logo.jpeg" class="attachment-full img-responsive" alt="">
+               
+                    <!-- <h1>Southern Educational Institute</h1><span>Galle</span></a>  -->
+                <!-- < src="..\..\..\assets1\img\logo.jpeg">        -->
+                 </div>
+                        <!-- <a class="navbar-brand" href="#">
+                            <h3>Southern Educational Institute</h3><span>Galle</span></a>
+                    </div> -->
+                    <div id="navbar" class="collapse navbar-collapse navbar-right">
+                        <ul class="nav navbar-nav">
+                                <li><a href="home.html">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="class_schedule.html">Class Schedule</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="signout.html">Sign Out</a></li>
+                                <!-- <li><a href="login.html">Sign In</a></li> -->
+                            <!-- <li><a href="index.html">Home</a></li>
+                            <li class="active"><a href="#about">Features</a></li> -->
+                            <!-- <li><a href="about.html">About Us</a></li> -->
+                            <!-- <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="faq.html">FAQ</a></li> -->
+                            <!-- <li><a href="class_schedule">Class Schedule</a></li>
+                            <li><a href="contact.html">Contact Us</a></li> -->
+                            <!-- <li><a href="login.html">Sign In</a></li>
+                            <li><a href="registration.html">Sign Up</a></li> -->
+                            <!-- <li><a href="signout.html">Sign Out</a></li> -->
+                        </ul>
+                    </div>
+                    <!--/.nav-collapse -->
+                </div>
+            </nav>
+            <!--/.nav-ends -->
+        </header>
+    
 
 
 
@@ -454,110 +477,125 @@
     </section> -->
 
     <section id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-3 col-xs-12 block">
-                    <div class="footer-block">
-                        <h4>Address</h4>
-                        <hr/>
-                        <p>Southern Institute Galle, Sri Lanka.
-                        </p>
-                        <!-- <a href="#" class="learnmore">Learn More <i class="fa fa-caret-right"></i></a> -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 col-sm-3 col-xs-12 block">
+                        <div class="footer-block">
+                            <h4>Southern Institute Galle</h4>
+                                <div class="user-image"><img src="..\..\..\assets1\img\logo.jpeg" alt="user" class="img-responsive" /></div>
+                       
+                            <!-- <h5>Wimalasurendra Mawatha, Galle 80000, </br>  Sri Lanka</h5>
+                            <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
+                                <img src="..\..\..\assets1\img\map.png">
+                            </a>
+                             <hr/> -->
+                            <!-- <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.
+                            </p> -->
+                            <!-- <a href="#" class="learnmore">Learn More <i class="fa fa-caret-right"></i></a> -->
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-md-3 col-sm-3 col-xs-12 block">
-                    <div class="footer-block">
-                        <h4>Useful Links</h4>
-                        <hr/>
-                        <ul class="footer-links">
-                            <li><a href="#">About Us</a></li>
-                            <!-- <li><a href="#">Features</a></li>
-                            <li><a href="#">Portfolio</a></li> -->
-                            <li><a href="#">Class Schedule</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <!-- <li><a href="#">Sign In</a></li>
-                            <li><a href="#">Sign Up</a></li> -->
-                            <li><a href="#">Sign Out</a></li>
-                            <li><a href="#">Notifications</a></li>
-                            <li><a href="#">Registrations</a></li>
-                            <li><a href="#">Hall Management</a></li>
-                            <li><a href="#">Payment</a></li>
-                            <li><a href="#">Attendence</a></li>
-                        </ul>
+    
+                    <div class="col-md-3 col-sm-3 col-xs-12 block">
+                        <div class="footer-block">
+                            <h4>Useful Links</h4>
+                            <!-- <hr/> -->
+                            <ul class="footer-links">
+                                <li><a href="home.html">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="class_schedule.html">Class Schedule</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="signout.html">Sign Out</a></li>
+                                <!-- <li><a href="registration.html">Sign Up</a></li> -->
+                            </ul>
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-md-3 col-sm-3 col-xs-12 block">
-                    <div class="footer-block">
-                        <h4>Community</h4>
-                        <hr/>
-                        <ul class="footer-links">
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">Free Goods</a></li>
-                        </ul>
+    
+                    
+                </ul>
+                    <div class="col-md-3 col-sm-3 col-xs-12 block">
+                        <div class="footer-block">
+                                <h4>Visit Us</h4>
+                                <h5>Southern Institute Galle</h5>
+                                <h5>Wimalasurendra Mawatha, <br/>Galle 80000, </br>  Sri Lanka</h5>
+                                <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
+                                    <img src="..\..\..\assets1\img\map.png">
+                                </a>
+                                 <!-- <hr/> -->
+                            <!-- <h4>Contact Us</h4>
+                            <hr/>
+                            <h4>Southern Institute Galle</h4>
+                            <h5>Wimalasurendra Mawatha, Galle 80000, </br>  Sri Lanka</h5>
+                            <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
+                                <img src="..\..\..\assets1\img\map.png">
+                            </a>
+                             <hr/> -->
+                            <!-- <ul class="footer-links">
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Forum</a></li>
+                                <li><a href="#">Free Goods</a></li>
+                            </ul> -->
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-md-3 col-sm-3 col-xs-12 <block></block>">
-                    <div class="footer-block">
-                        <h4>Recent Posts</h4>
-                        <hr/>
-                        <ul class="footer-links">
-                            <li>
-                                <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                <p class="post-date">May 25, 2017</p>
-                            </li>
-                            <li>
-                                <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                <p class="post-date">May 25, 2017</p>
-                            </li>
-                            <li>
-                                <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                <p class="post-date">May 25, 2017</p>
-                            </li>
-
-                        </ul>
+    
+                    <div class="col-md-3 col-sm-3 col-xs-12 <block></block>">
+                        <div class="footer-block">
+                            <h4>Recent Posts</h4>
+                            <!-- <hr/> -->
+                            <ul class="footer-links">
+                                <li>
+                                     <div class="user-image"><img src="..\..\..\assets1\img\post.jpeg" alt="user" class="img-responsive" /></div>
+                       
+                                    <!-- <a href="#" class="post">Lorem ipsum dolor sit amet</a>
+                                    <p class="post-date">May 25, 2017</p> -->
+                                </li>
+                                <!-- <li>
+                                    <a href="#" class="post">Lorem ipsum dolor sit amet</a>
+                                    <p class="post-date">May 25, 2017</p>
+                                </li>
+                                <li>
+                                    <a href="#" class="post">Lorem ipsum dolor sit amet</a>
+                                    <p class="post-date">May 25, 2017</p>
+                                </li> -->
+    
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-
-    </section>
-
-    <section id="bottom-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-6 col-xs-12 btm-footer-links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms of Use</a>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                    Developed by <a href="#">Aspire Software Solutions</a> designed by <a href="#">Designing Team</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div id="panel">
-        <div id="panel-admin">
-            <div class="panel-admin-box">
-                <div id="tootlbar_colors">
-                    <button class="color" style="background-color:#1abac8;" onclick="mytheme(0)"></button>
-                    <button class="color" style="background-color:#ff8a00;" onclick="mytheme(1)"> </button>
-                    <button class="color" style="background-color:#b4de50;" onclick="mytheme(2)"> </button>
-                    <button class="color" style="background-color:#e54e53;" onclick="mytheme(3)"> </button>
-                    <button class="color" style="background-color:#1abc9c;" onclick="mytheme(4)"> </button>
-                    <button class="color" style="background-color:#159eee;" onclick="mytheme(5)"> </button>
+    
+    
+        </section>
+    
+        <section id="bottom-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12 btm-footer-links">
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms of Use</a>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12 copyright">
+                        Developed by <a href="#">Team Innoview</a> designed by <a href="#">UCSC</a>
+                    </div>
                 </div>
             </div>
-
-        </div>
-        <a class="open" href="#"><span><i class="fa fa-gear fa-spin"></i></span></a>
-    </div>
-
-</body>
-
-</html>
+        </section>
+    
+        <!-- <div id="panel">
+            <div id="panel-admin">
+                <div class="panel-admin-box">
+                    <div id="tootlbar_colors">
+                        <button class="color" style="background-color:#1abac8;" onclick="mytheme(0)"></button>
+                        <button class="color" style="background-color:#ff8a00;" onclick="mytheme(1)"> </button>
+                        <button class="color" style="background-color:#b4de50;" onclick="mytheme(2)"> </button>
+                        <button class="color" style="background-color:#e54e53;" onclick="mytheme(3)"> </button>
+                        <button class="color" style="background-color:#1abc9c;" onclick="mytheme(4)"> </button>
+                        <button class="color" style="background-color:#159eee;" onclick="mytheme(5)"> </button>
+                    </div>
+                </div>
+    
+            </div>
+            <a class="open" href="#"><span><i class="fa fa-gear fa-spin"></i></span></a>
+        </div> -->
+    </body>
+    </html>
+    
