--- a/views/html/admin.html
+++ b/views/html/admin.html
@@ -437,6 +437,7 @@
                         <!-- <hr/> -->
                         <ul class="footer-links">
                             <li><a href="home.html">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li><a href="class_schedule.html">Class Schedule</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                             <li><a href="login.html">Sign In</a></li>
